# PotteryAssistant

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
src/pottery_assistant/: agent.py  api.py  my_module.py  observability.py
tests/: test_agent.py  test_api.py  test_my_module.py
