[project]
name = "pottery_assistant"
version = "0.0.1"
description = "pottery_assistant"
readme = "README.md"
license = "MIT"
authors = [{ name = "Victor Picon", email = "victorhpicon@hotmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "grandalf>=0.8",
    "langchain[google-genai]>=1.3.0",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-redis>=0.4.1",
    "python-dotenv>=1.1.0",
    "rich>=15.0.0",
    "uvicorn[standard]>=0.47.0",
]

[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest", "pytest-xdist"]

[project.scripts]
pottery_assistant = "pottery_assistant.my_module:run_from_script"

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = ["T201", "COM812", "INP001", "D", "ANN401", "ERA001", "A004"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["pottery_assistant"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src", 'tests']
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }
